Fixes: NB#160997 - DuiComboBox wrong size after language change
RevBy:
Details: ComboBox made the size of ContentItem, so bigger chinese characters still fit.

--- a/base/meegotouch/libmeegotouchviews/style/mcomboboxstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mcomboboxstyle.css
@@ -49,8 +49,8 @@ MComboBox MContentItemStyle {
     padding-bottom: $PADDING_DEFAULT;
 
     preferred-size: -1 $SIZE_BUTTON;
-    minimum-size: $SIZE_BUTTON $SIZE_BUTTON;
-    maximum-size: 100% $SIZE_BUTTON;
+    minimum-size: $SIZE_ONE $SIZE_ONE;
+    maximum-size: 100% $SIZE_ONE;
 
     image-object-name: "MComboBoxIcon";
     title-object-name: "MComboBoxTitle";
